src/components/Projects/IllustrationsPage/IllustrationItem.css
.illustrations-container {
  margin: 0 auto 0 auto;
}

.illustration-container {
  width: fit-content;
  margin: 50px auto 50px auto;
}
.illustration-container:first-child {
  margin-top: 0;
}
.illustration-container:last-child {
  margin-bottom: 0;
}

.illustration {
  max-width: 500px;
}

.illustration-container:nth-child(even) {
  margin-left: auto;
  margin-right: 0;
  display: flex;
  justify-content: end;
}
.illustration-container:nth-child(odd) {
  margin-left: 0;
  margin-right: auto;
}

